pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/petshop/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petshop
  labels:
    pswebinar: "21.04"
