pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/petshop/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop-web
  namespace: petshop
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: petshop
    component: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petshop-web
  namespace: petshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petshop
      component: web
  template:
    metadata:
      labels:
        app: petshop
        component: web
    spec:
      automountServiceAccountToken: false
      containers:
        - image: sixeyed/petshop-web:1809
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: "/petshop-web/config"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi              
      volumes:
        - name: config
          projected:
            sources:             
              - configMap:
                  name: petshop-app-settings
              - secret:
                  name: petshop-connection-string
      nodeSelector:
        kubernetes.io/os: windows 
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm: 
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - petshop
                    - key: component
                      operator: In
                      values:
                      - web
                topologyKey: "topology.kubernetes.io/zone"
