pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/petshop/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop-webservice
  namespace: petshop
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: petshop
    component: webservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petshop-webservice
  namespace: petshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petshop
      component: webservice
  template:
    metadata:
      labels:
        app: petshop
        component: webservice
    spec:
      automountServiceAccountToken: false
      containers:
        - image: sixeyed/petshop-webservice:1809
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: connection-string
              mountPath: "/petshop-webservice/config"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /ProductService.svc
              port: 80
            periodSeconds: 20
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 400Mi  
      volumes:
        - name: connection-string
          secret:
            secretName: petshop-connection-string
      nodeSelector:
        kubernetes.io/os: windows
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm: 
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - petshop
                    - key: component
                      operator: In
                      values:
                      - webservice
                topologyKey: "topology.kubernetes.io/zone"
